lib/src/compiler/tests/testdata/errors/49.out
error[E002]: wrong type
 --> line:4:18
  |
4 |     for all x in test_proto2.int64_zero : ( true )
  |                  ^^^^^^^^^^^^^^^^^^^^^^ expression should be `array` or `map`, but is `integer`
  |